[package]
name = "ZipTileServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.9"
r2d2 = "0.8"
r2d2_sqlite = "0.21"

[dependencies.rusqlite]
version = "0.28"
features = ["bundled"]